--- a/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -172,7 +172,7 @@ For the reward of learning, a new surprising piece of information needs to fit p
 
 Measuring the entropy of the visual stream is not necessarily a reliable indicator of the pleasing power of the information channel. All information streamed to the hippocampus undergoes a high degree of processing. A stream of pixels representing a beautiful beach will be processed into a series of shapes and textures. Those in turn will model palms, sand, and the sea. This highly compressed simple information will determine the original response to the information input.
 
-视觉流的熵的测量不一定是信息通道令人愉悦的能力的可靠指标。流向海马体的所有信息都经过高度处理。代表美丽海滩的像素流将被加工成一系列形状和纹理。反过来，这些模型将依次模拟棕榈树、沙子和大海。这种高度压缩的简单信息将决定对信息输入的最初响应。
+视觉流的熵的测量不一定是信息通道令人快乐的能力的可靠指标。流向海马体的所有信息都经过高度处理。代表美丽海滩的像素流将被加工成一系列形状和纹理。反过来，这些模型将依次模拟棕榈树、沙子和大海。这种高度压缩的简单信息将决定对信息输入的最初响应。
 
 Scanning for information in the environment is equivalent to scanning for scents of food. The scent is enticing, but only the actual feeding is a true reward. This is why entropy scanning does not need to be rewarding. All it needs to do is to lead to a reward. The anterior hippocampus responds to entropy, as noticed earlier, however experimental design made sure that the entropy refers to the combination of simple shapes that do not lose much information during input processing. Instead of speaking of signal entropy, we should rather focus on the input entropy at the information comparator such as the hippocampus. It is not the retinal pixels that matter, but the shape of the palm as represented on the comparator input. For the comparator, the high entropy pattern of grayness or static noise will not differ from whiteness or silence. They will all bring the same entropy on input: zero. This is why I used the term [learntropy](https://supermemo.guru/wiki/Learntropy) to accurately refer to the attractiveness of the information channel.
 
@@ -662,23 +662,39 @@ As reward centers can be involved in the anticipation of pleasure, we should rat
 
 Instead of speaking of the need to "stimulate curiosity", which should rather speak of the need to "develop the [learn drive](https://supermemo.guru/wiki/Learn_drive)". The key difference is in perceiving stimulation as quick-fix approach that might be used in a classroom as opposed to a long-term process that takes months and years. An advertising campaing may use cheap tricks to stimulate our curiosity, while a lifelong passion is a formula for insatiable and unwaning [learn drive](https://supermemo.guru/wiki/Learn_drive), which is a perfect warranty for unceasing learning.
 
-与其说需要「激发好奇心」，不如说需要「培养学习动力」。关键的区别在于，将刺激视为一种可能在课堂上使用的快速解决方法，而不是需要数月甚至数年的长期过程。一次广告宣传活动可能会用一些廉价的手段来激发我们的好奇心，而终身的激情则是永不满足、永不衰退的学习动力的公式，这是不断学习的完美保证。
+与其说需要「激发好奇心」，不如说需要「培养学习动力」。关键的区别在于，将刺激视为一种可能在课堂上使用的快速解决方法，而不是需要数月甚至数年的长期过程。一次广告宣传活动可能会用一些廉价的手段来激发我们的好奇心，而终身的激情则是永不满足、永不衰退的学习内驱力的配方，这是不断学习的完美保证。
 
 It is true that the state of curiosity will improve attention and this will improve overall learning, however, this should not ever be used as a classroom strategy. Gamification of learning makes sense only if rewards come from target learning, not from learning that surrounds the target. Many learning programs for children use bright colors, unusual sounds or smiling faces to attract attention to induce learning. However, once habituation sets it, this form or artificial gamification stops being effective. Moreover, incidental knowledge does not last. Any effort to employ curiosity to spark incidental learning is non-specific and inefficient. Equally well we might hope that pharmacological intervention, e.g. with Ritalin, could improve learning. Instead, learning must be its own reward.
 
+的确，好奇心的状态会提高注意力，这会提高整体的学习，但是，这永远不应该作为一种课堂策略来使用。只有当奖励来自学习对象，而不是来自学习对象的周边，学习的游戏化才有意义。许多儿童学习程序使用鲜艳的颜色，不寻常的声音或微笑的脸来吸引注意，以诱导学习。然而，一旦习惯性了它，这种形式或人工游戏化就不再有效。而且，附带的知识不会持续很久。任何利用好奇心来激发附带学习的努力都是不具体的和低效的。同样，我们可能希望药物干预，如利他林，可以改善学习。然而于此相反，学习必须基于它本身的奖励。
+
 The nucleus accumbens and the ventral tegmental area are involved in pleasure, in anticipation of pleasure, and in signal evaluation. The signals from the [knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network) converge into those areas in both their [motivational and affective valence](https://supermemo.guru/wiki/Brain_centers_involved_in_valuation_of_anticipated_outcomes:_nucleus_accumbens_and_VTA). Dopamine is involved in the anticipation of pleasure. As dopamine is involved in attention, anticipation of pleasure alone would lead to improved learning due to a better focus on the source of information that is expected to deliver the pleasure.
+
+伏隔核和腹侧被盖区参与了快乐、对快乐的预测和信号评估。来自[知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)的信号在[动机和情感](https://supermemo.guru/wiki/Brain_centers_involved_in_valuation_of_anticipated_outcomes:_nucleus_accumbens_and_VTA)两个方面汇合到这些区域。多巴胺与快乐的预期有关。由于多巴胺参与了注意力，仅仅是对快乐的预期就会导致学习的改善，这是因为更加关注预期传递快乐的信息来源。
 
 If you are unconvinced, think of how much you hate your news channel when they do their tricks to pique your interest, and then say "*find out after the break*". You can get even more livid when they ruin it all with "*Breaking News!*". Anticipation can lead to frustration too. Only actual learning provides the reward. Only actual learning reward makes sense from the point of view of evolution. We do not want to reward an animal for the mere sight of food.
 
+如果你不相信，想想你有多讨厌你的新闻频道，当他们耍诡计激起你的兴趣时，然后说“休息后再找出答案”。当他们用“突发新闻”毁掉这一切时，你会变得更加愤怒。期待也会导致挫折。只有实际的学习才能提供奖励。从进化的角度来看，只有实际的学习奖励才有意义。我们不想将仅仅给动物看食物作为奖励。
+
 The buzz in the nucleus accumbens can be a direct expression of pleasure or might also indicate the state of pleasure seeking. In the end, the actual interpretation does not matter for the ultimate conclusion: **boredom and displeasure are the enemies of learning**.
+
+伏隔核中的嗡嗡声可以是快乐的直接表达，也可能是寻找快乐的状态。最后，对于最终的结论，实际的解释并不重要：**无聊和不悦是学习的敌人**。
 
 For efficient learning in which new knowledge complements current knowledge, we need to follow the [learn drive](https://supermemo.guru/wiki/Learn_drive). In simple terms, this means that the pleasure of learning is desirable in education. We should never learn in the state of displeasure (cf. [Desirable difficulty](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Desirable_difficulty)). Painful learning comes from the brain letting the student know that, in information theoretic sense, the new knowledge does not fit! It will be rejected. Pleasure is a good guide!
 
+为了进行用新知识补充现有知识的有效学习，我们需要遵循[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。简单地说，这意味着学习的快乐在教育中是可取的。我们决不应该在不愉快的状态下学习(参见：[值得的难度](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Desirable_difficulty))。大脑让学生知道，在信息论的意义上，新的知识并不合适，痛苦的学习来自于此！它会被拒绝。而快乐是很好的向导！
+
 From the above neural reasoning we derive the obvious, **the best warranty of efficient learning is to let students learn on their own and follow their own passions.**
+
+通过上面的神经学推理，我们得出了一个显而易见的结论，**有效学习的最好保证就是让学生自己学习，跟随自己的激情。**
 
 ## 6.17 Biederman model
 
+## Biederman 模型
+
 ### 6.17.1 Pleasure of reading about the pleasure of reading
+
+### 阅读关于阅读快乐的快乐
 
 In 2006, Irving Biederman and Edward A. Vessel, published a paper that gave me unforgettable pleasure to read. The article itself explained the pleasure of reading to me. In a paper titled "*Perceptual pleasure and the brain*", Biederman hypothesized that a gradient of opioid receptors in brain structures responsible for visual perception might contribute to the pleasure of viewing nice scenes such as beautiful landscapes. Biederman's idea seemed to explain to me what I have known for ages: **learning is pleasurable**. I always liked to learn, however, I never truly understood what underlies my liking in terms of brain science. Biederman's explanation was a perfect fit and it was powerfully pleasurable. It explained something that bothered my mind for a longer while. At the moment of reading, I was very self-analytical. While reading about the pleasure of reading I was trying to "feel" how the enlightenment of reading provides the pleasure. The pleasure of reading about the pleasure of reading became unforgettable.
 
@@ -690,11 +706,15 @@ There is a similar hierarchical system for processing speech and music. A tempor
 
 ### 6.17.2 Opioid vs. dopamine pleasure
 
+### 阿片类药物与多巴胺的快乐
+
 There is a slight problem with the Biederman model though. The pleasure of learning can be analyzed consciously. The pleasure of reading about Biederman model, in my own case, could be decomposed and tracked down to individual components of the model. This fact implies that the pleasure is integrated with conscious experience. Consciousness is a notoriously hard nut to crack for neuroscience. Most of what we know about consciousness is either speculative or based on hard and expensive experiments in which electrodes implanted in the brain can be used to elicits effects that can later, or concurrently, be reported by the affected individual. The evidence seems to be converging on the integrative model of consciousness in which an activation of several structures in the brain gets integrated and perceived as conscious self. In that line of thinking, activating a Halle Berry neuron somewhere in the cortex is not enough to bring Halle to one's consciousness. Millions of concept neurons can get activated at the same time and a thinking mind can only operate on a few pieces of the model of the perceived reality. To bring Halle to one's mind, the activation must get integrated with other components of conscious perception, including the reward of the perception.
 
 For those reasons, opioid receptors in cortical neurons will not do much for the ultimate reward of learning. An opiod antagonist, [naloxone, can take away some of the pleasure of music in some people](https://supermemo.guru/wiki/Thrill_of_music_may_be_attenuated_with_opioid_antagonists). However, the opioid pleasure of learning should rather produce a mild bliss of first-time micro-dose heroin or morphine use. In that sense, release of endomorphins and activation of opioid receptors can make a contribution to the pleasure of learning. Nevertheless, this pleasure isn't specific enough to give one a jolt of "wow!", "aha!" or "eureka!" (Biederman calls it "click of comprehension"). For that ultimate learning reward, there must be an integrative reward experience coming from the [pleasure centers in the brain](https://supermemo.guru/wiki/Neural_circuits_involved_in_liking_and_wanting).
 
 ### 6.17.3 Pleasure of association
+
+### 联想的快乐
 
 That ultimate pleasure jolt of discovery will come from a meaningful association. It can be explained using the pleasure of understanding the Biederman model itself. When thinking about the model, we activate two important concepts in our minds: (1) a gradient of meaning (derived from understanding neural structures involved in visual perception), and (2) a gradient of pleasure (derived from the observation on the content of opioid receptors in visual pathways). Once these two concept come up in mind, there is a glue of analogy: the concept of *"gradient"*. That glue helps bring up the association that gives a jolt of pleasant enlightenment: **MEANING = PLEASURE**! That's exactly what I experienced when reading Biederman's paper. For that jolt to happen, it is not enough that there are more opiate receptors associated with the concept of the gradient of pleasure than with gradient's mathematical underpinnings or its association with the word "gradient". It is not enough that there is more opiate associated with the novel concept of "gradient of meaning" than with the often used term "meaning". The jolt happens when those two highly priced concepts collide: meaning + pleasure.
 
@@ -704,15 +724,21 @@ The pleasure of learning does not need to involve attractive representatives of 
 
 ### 6.17.4 Impact of memory on the pleasure of learning
 
+### 记忆对学习快乐的影响
+
 I would also add to Biederman's hypotheses on desensitization, i.e. the decline in pleasure with repeated exposure. Biederman suggests that children love repetitive [videogames](https://supermemo.guru/wiki/Videogames) because of the gambling factor. However, gambling is no less potent in adults. I posit that children enjoy repetitive learning more because of [childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia). Some of the repeat pleasure may come from limited comprehension, but some will simply be explained by accelerated forgetting. Poor comprehension and forgetting are the primary differentiators between the adult and the child brains.
 
 We should also notice that a great deal of decline in pleasure of review will come not from competitive learning but from [long term-memory consolidation](https://supermemo.guru/wiki/Two_component_model_of_memory) that might result in signals flowing efficiently in the system. Competitive learning may be important in pattern recognition but in associative learning, it will be high [retrievability](https://supermemo.guru/wiki/Retrievability) that will undermine the pleasure of repeated exposure.
 
 ### 6.17.5 Stages of learn drive evolution
 
+### 学习内驱力进化的几个阶段
+
 When I hypothesized on the emergence of powerful [learn drive](https://supermemo.guru/wiki/Learn_drive) in humans, I had in mind the direct channel from knowledge to reward centers. It would ultimately be a higher level of [learn drive](https://supermemo.guru/wiki/Learn_drive) than the one implied by the Biederman model. Each time receptors are involved, evolution has a simple and grateful material to work with. Receptor gradient has originally been discovered in a [rhesus cortex](https://supermemo.guru/wiki/Opioid_receptors_form_a_gradient_along_a_processing_hierarchy). Similar mechanisms might be involved in simpler brains or even more primitive nervous systems deprived of central control. I have no idea what an ant thinks or how it feels, but finding a great food source must definitely be a source of some kind of ant pleasure. From this we can conclude that the pleasure of learning might not be much phylogenetically younger than the nervous system itself. However, in the course of evolution, the drive has built up new layers of functionality and efficiency. Playful creativity seems to emerge only with some birds and with mammals. That evolutionary process might have ultimately peaked as human [learn drive](https://supermemo.guru/wiki/Learn_drive). This will naturally, at some point, be implemented in thinking machines. Understanding the power of the [learn drive](https://supermemo.guru/wiki/Learn_drive) will be vital for survival of humanity: both in its need for artificial intelligence and the threat of having AI turn against mankind.
 
 ## 6.18 Desirable difficulty
+
+## 值得的难度
 
 **Desirable difficulty** is a concept that might be an excuse for tolerating the displeasure of learning at school. Here I explain why this excuse is unjust and dangerous.
 
@@ -736,7 +762,11 @@ Note also that nearly all of the above desirable difficulties are inherently wir
 
 ## 6.19 Addiction to learning
 
+## 学习成瘾
+
 ### 6.19.1 Inborn addiction
+
+### 天生成瘾
 
 We are born in love with learning. That love usually wanes fast during the years of compulsory schooling. The longer we can sustain the love of learning, the bigger the benefit for the brain, health and mankind. Love of learning has nothing to do with addiction. The definition of [addiction](https://en.wikipedia.org/wiki/Addiction) includes adverse consequences that are a result of compulsive engagement in an activity.
 
@@ -744,21 +774,31 @@ Negative side effects of learning are tiny in comparison to benefits. If there i
 
 ### 6.19.2 Learning and gambling
 
+### 学习和赌博
+
 There is a close connection between the reward systems involved in learning and in gambling. Gambling and learning new words both activate the [ventral striatum](https://en.wikipedia.org/wiki/Striatum) in a [similar fashion](http://www.cell.com/current-biology/fulltext/S0960-9822(14)01207-X). This close connection with gambling may confuse the picture for learning. A gambler at a slot machine does not learn much. Addictive videogaming is better. It can be pretty educational. Many team game addicts achieve fluency in English having made no progress at school before. Addiction to sports news may also involve a degree of learning. I learned about [Cabinda](http://en.wikipedia.org/wiki/Republic_of_Cabinda) only during the Africa Cup of Nations (football). Addiction to Facebook updates is not different either. It is based on [variable reward](https://supermemo.guru/wiki/Variable_reward) in anticipation of specific gains, however, it can also involve a great degree of learning. That learning may involve gossip, celebrity news, fake news, or actual useful learning. Even political poll updates can cause an addiction. In the battle between Hillary Clinton and Donald Trump, the polls were balanced enough to produce the cliffhanger effect. Compulsive checks for new polls have all hallmarks of an addiction. This kind of addiction, however, can lead to a great deal of learning. It is up to the student to separate gambling from learning. Voracious learning is good. Learning derived from an addiction may be good too. However, gambling on its own brings little value to human existence.
 
 ### 6.19.3 Learning and sleep
+
+### 学习和睡眠
 
 Obsessive learning may encroach on sleep time, and may contribute to the epidemic of insomnia and [DSPS](https://supermemo.guru/wiki/DSPS). Creative minds with powerful [learn drive](https://supermemo.guru/wiki/Learn_drive) may stay up learning till the early morning hours. This violation of sleep pattern was difficult or impossible before the arrival of electric lighting. The good news is that the [learn drive](https://supermemo.guru/wiki/Learn_drive) tends to wane with network fatigue. The longer we learn, the greater the degree of saturation in memory circuits. Only sleep can bring relief. This is why even most voracious learners tend to get sleepy and give up learning at some point. If a reader skips the night over a novel, this may be a likely combination of insufficient sleep drive, reduced learning, and increased variable reward that is typical of suspenseful fiction.
 
 ### 6.19.4 Learning and exercise
 
+### 学习和锻炼
+
 I hear that obsessive learning can lead to less exercise. That would be bad. However, I think that it is bad learning that is more likely to have this effect. Good learning is joyous and sparks extra energy. A happy kid should not survive long sitting over a book or over a computer. There must be a way to vent energy. Perhaps we should rather say that reduced exercise is a hallmark of learning addiction, while good learning has neurotrophic effects and should make one burst with extra energy to burn?
 
 ### 6.19.5 Learning restraint
 
+### 学习限制
+
 Learning has its cost and it takes time. This is why it should be judicious. However, good learning is nearly always a good long-term investment. This is why we should never fear an addiction. Just the opposite, we should cherish and stoke up the [learn drive](https://supermemo.guru/wiki/Learn_drive) to provide for happy lifelong learning.
 
 ## 6.20 Displeasure of learning
+
+## 学习的不快
 
 When I claim that all learning is pleasurable, I hear a chorus of voices like "*I had to go through an awfully stressful exam that gave me lots of good knowledge for life*". Those voices confuse the pleasure of good learning with the displeasure of factors that turn learning into a horror for many students. Those horror factors are bad teachers, harsh parents, deadlines, stress, bad sleep, awful textbooks, excess volume, and more.
 
@@ -772,6 +812,8 @@ In the ultimate account, even if there is a displeasure related to exams, certif
 
 ## 6.21 Learning and procrastination
 
+## 学习和拖延
+
 If learning is the most sustainable form of pleasure, why do half of the students procrastinate? This is nearly a triple of the figure for the general population.
 
 The answer is simple and important: students procrastinate because as much as good learning is a pleasure, bad learning is highly unpleasant. Most of assignments at school or even college carry a great deal of mismatch with the needs of the [learn drive](https://supermemo.guru/wiki/Learn_drive). This kind of learning is ineffective and unpleasant. Those kids will often play computer games in the evening claiming they *need to rest their brains*. I doubt their brains are at rest. They actually do jobs that they find pleasurable. A great deal of that pleasure comes from new learning. Unfortunately, there are no credits at school for good gaming, so the sinusoidal cycle of chores-and-fun begins on the next day or even the same day with homework.
@@ -784,13 +826,19 @@ If you think you are lazy about learning, you need to re-evaluate your materials
 
 ## 6.22 Learning and depression
 
+## 学习和抑郁
+
 Learning is a sustainable and non-addictive form of pleasure with hardly any side effects other than cost in time. In addition, good learning tends to absorb the mind, and promote more learning by boosting the [learn drive](https://supermemo.guru/wiki/Learn_drive). This means that learning should be employable as therapy in depression.
 
 ### 6.22.1 Learning at school
 
+### 在校学习
+
 If [learning is a source of pleasure and reward](https://supermemo.guru/wiki/Pleasure_of_learning), why do we see [rampant depression](https://supermemo.guru/wiki/Incremental_increase_in_depression) in kids of school age? Despite being institutions of learning, schools are [more likely to contribute to depression than to act as a remedy](https://supermemo.guru/wiki/I_became_so_depressed_that_I_stopped_going_to_school). Without the freedom to learn, it is hard to achieve good learning. For learning to be pleasurable, it needs to be powered by the [learn drive](https://supermemo.guru/wiki/Learn_drive). It cannot be coercive or mandatory. It must be free.
 
 ### 6.22.2 Impact of memory on mood
+
+### 记忆对情绪的影响
 
 Free learning is fun, however, the pleasure of learning is not what makes it a great tool against depression.
 
@@ -808,9 +856,13 @@ The ultimate conclusion is that learning is not a panacea, however, it can play 
 
 ### 6.22.3 Anti-depressants
 
+### 抗抑郁药
+
 I am a medical Luddite. For a healthy body, I stick to the rule "*if it ain't broke, don't fix it*". I avoid all forms of pharmacological intervention. I believe in powers of [homeostasis](https://en.wikipedia.org/wiki/Homeostasis) and dangers of homeostatic intervention. The strongest drugs I use are coffee and beer. I do not even use aspirin. I am most dismayed by the misuse of antibiotics, painkillers, sleeping pills and anti-depressants. It has been decades since I last took an antibiotic. Long enough to forget. I will use one on a death bed if necessary. All drugs have their legitimate use and so do anti-depressants. As they result in receptor downregulation, once taken, they make the neurotransmitter status quo worse. This usually means, the more the drug is taken, the more it needs to be taken to avoid a setback. However, in severe cases of clinical depression, the drugs may stop the runaway process. They may protect the brain from self-injury. Once a depressed patient starts losing brain cells, the road to recovery becomes long and bumpy. The moment anti-depressant therapy begins, if it works, is the best moment to use learning as therapy. As long as the brain is willing to proceed, learning can start up those delicate tendrils of knowledge that will hook onto reality to produce vestigial [learn drive](https://supermemo.guru/wiki/Learn_drive). In the ideal case, once the drugs are withdrawn, that learn drive should survive to begin a process that is a reverse of depression: positive feedback of learning, creativity, good sleep, and good mood. This is not easy, but it is very important. If drug therapy is the only thing that changes in a patient's life, it will work only as a break in the pathological process. It will not set the brain in a better state than the one from before the problem started. Improvements require active effort. Without a healthy [learn drive](https://supermemo.guru/wiki/Learn_drive), building up positive memories will not begin.
 
 ### 6.22.4 Learn drive and optimism
+
+### 学习内驱力和乐观
 
 Toddlers seem to show the most exuberant learn drive. No wonder, healthy children are born optimistic. There is a correlation between optimism and the [learn drive](https://supermemo.guru/wiki/Learn_drive). Happy mind might act as an energizer of the learn drive on the neurochemical basis. Pessimism will definitely act as a suppressant or filter that will prevent the expression of the [learn drive](https://supermemo.guru/wiki/Learn_drive). In that sense, pessimistic mind may mask the learn drive. In depression, the learn drive may disappear entirely. No wonder [Dr Robert Sapolsky](https://en.wikipedia.org/wiki/Robert_Sapolsky) called depression the worst disease in the world.
 
@@ -818,15 +870,21 @@ A consensus seems to emerge that schools are a major contributor to depression a
 
 ### 6.22.5 Can learning help you?
 
+### 学习可以帮到你吗？
+
 If you are reading this, and you are not sure learning can help you, ask yourself the question: *Are you in a good mood today?* As mentioned above, when you are on a downswing and looking for a solution, your interpretations are darker, and you may not find this text comforting enough. Remember then about the concept of activation energy: you need a little first step to begin, and you may then be pulled in by a vortex of interesting things to learn.
 
 If you are in no mood for quantum mechanics today, start from petty celebrity news, or sports news. Lowly learning is better than no learning!
 
 ## 6.23 Optimization of education: Global or Local?
 
+## 教育的优化：全局还是局部？
+
 Is there a risk in using pleasure as a guiding light in education?
 
 ### 6.23.1 Perfect model of education
+
+### 完美的教育模型
 
 Over long years of schooling, we slowly develop an imaginary model of a perfect academic learning process in which we [set long-term goals](https://supermemo.guru/wiki/Setting_goals_can_change_your_life), follow the curriculum, add important pieces of knowledge, and get to the point when we receive a college degree with rock solid knowledge in a given area supported by extensive general knowledge needed for an efficient function in society. The longer we stay in the school system, the harder it is to step away and have an objective view of that model. Paradoxically, verification of that model comes hardest to those minds who do well at school and start believing they have succeeded thanks to that perfect model of academic learning. Smart people suffer less pain at school, and, as a result, think less of the problem of the school system. Successful students internalize the model and perpetuate it by providing the same fixed path for future generations.
 
@@ -834,9 +892,13 @@ Over long years of schooling, we slowly develop an imaginary model of a perfect 
 
 ### 6.23.2 Optimization based on the learn drive
 
+### 基于学习内驱力的优化
+
 Unlike the curriculum, the optimization mechanism behind the [learn drive](https://supermemo.guru/wiki/Learn_drive) has been perfected in the course of human evolution. It is capable of driving individual knowledge to the level needed to disentangle all complexities of science or engineering. Before the arrival of compulsory schooling, mankind has achieved all imaginable breakthroughs needed to start [Enlightenment](https://en.wikipedia.org/wiki/Age_of_Enlightenment) or [Industrial Revolution](https://en.wikipedia.org/wiki/Industrial_Revolution). Compulsory schooling has originally helped to lift the "unenlightened" masses to a new level, however, it is increasingly driving itself into the optimization corner in which enlightenment is replaced by suppression of creative minds.
 
 ### 6.23.3 Designing a child's mind
+
+### 设计一个孩子的思想
 
 I hear this all the time from highly educated and very smart people that education is too important to let it rely on self-learning or on the blindness of the [learn drive](https://supermemo.guru/wiki/Learn_drive). Apparently, education is so important that we should plan it and design it globally with the best tools of science and using the best experts. While I was preoccupied with efficient learning, and before I really started thinking about the education system, I lived with the same conviction. It is quite natural to default to expert opinion.
 
@@ -852,6 +914,8 @@ Currently employed optimization of education uses knowledge tests as the measure
 
 ### 6.23.4 Reliance on emergence
 
+### 依赖于突现
+
 Optimization of education can employ the concept of [emergence](https://supermemo.guru/wiki/Emergence). The [learn drive](https://supermemo.guru/wiki/Learn_drive) is a mechanism by which knowledge is self-organizing with no [effort from teachers](https://supermemo.guru/wiki/Push_zone), and no pain from a child. Natural learning may take long hours, but it is [pleasurable](https://supermemo.guru/wiki/Pleasure_of_learning), and healthy kids don't mind learning all day long as long as this is learning of their own choosing.
 
 There are two vital facts we should hold in mind in reference to the local optimization of learning based on the [learn drive](https://supermemo.guru/wiki/Learn_drive):
@@ -864,6 +928,8 @@ A skeptic would notice that human progress has accelerated since the introductio
 Local optimization based on the [learn drive](https://supermemo.guru/wiki/Learn_drive) is highly unintuitive. Creation science comes from a similar unintuitive feelings about the mechanism of natural selection. How can a local evolutionary optimization based on random mutations lead to a marvel of a human being? Global design/optimization/guidance by the hand of God seems unavoidable. Fewer people subscribe to the creation science today, however, a vast majority of the population has no idea what mechanism underlies the [learn drive](https://supermemo.guru/wiki/Learn_drive), and why ignoring it is the chief problem of the [Prussian education system](https://en.wikipedia.org/wiki/Prussian_education_system).
 
 ### 6.23.5 The tree metaphor
+
+### 树类比
 
 Given enough time and access to knowledge-rich environments, without the need for an education system, the knowledge of an individual grows into a large, comprehensive, and [coherent body](https://supermemo.guru/wiki/Coherence). This is true of all free, and healthy individuals. The size and the quality of the tree may depend on one's personality, interests, and the starting point of the intellectual development. However, one of the chief myths of education is that the organic growth of knowledge leads to multiple biases and [areas of ignorance](https://supermemo.guru/wiki/Ban_on_homeschooling). Those blank spots are allegedly larger than those that remain after years of schooling. Due to the computational power of the [learn drive](https://supermemo.guru/wiki/Learn_drive), and the phenomenon of [emergence](https://supermemo.guru/wiki/Emergence), the opposite is true. The metaphor I like to use to explain the power of the [learn drive](https://supermemo.guru/wiki/Learn_drive) is that of a tree growth.
 
@@ -883,11 +949,15 @@ Another metaphor that can help explain the [emergence](https://supermemo.guru/wi
 
 ### 6.23.6 Local optimization
 
+### 局部优化
+
 Local optimization of the [learn drive](https://supermemo.guru/wiki/Learn_drive) leads to a perfect match between human ability and individual's environment and goals. Global optimization of schooling suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive), defers to the suppressed [learn drive](https://supermemo.guru/wiki/Learn_drive) when matching individuals with their jobs, and results in an unhappy society where most individuals crave 9-5 jobs for their comfort where the leadership, learning, and responsibility are delegated to someone else. The opposite happens in [democratic schools](https://supermemo.guru/wiki/Democratic_schools) which rely on self-learning to produce self-determined, self-fulfilled and self-reliant individuals ready to accept any challenge in their chosen area of interest.
 
 In his historic commencement speech, Steve Jobs joked that before he was diagnosed with cancer, he did not know what the pancreas was. Apparently, his blind learn drive left a gap in his extensive knowledge. Even if this was true, I would never trade Steve Jobs and his opus vitae for a few failures of the local optimization of learning. One of the main points of his [inspiring speech](https://www.youtube.com/watch?v=D1R-jKKp3NA) was to follow one's [learn drive](https://supermemo.guru/wiki/Learn_drive). In his words "[*the only way to do great work is to love what you do*](http://news.stanford.edu/2005/06/14/jobs-061505/)". This truth has been repeated by all wise people for millennia.
 
 ### 6.23.7 Is global optimization possible?
+
+### 全局优化可能吗？
 
 [Global optimization](https://en.wikipedia.org/wiki/Global_optimization) finds an optimum for all input values. **Global optimization of learning** is done at the level of the department of education, e.g. by means of tools such as [common core](https://supermemo.guru/wiki/Common_core) and [standardized testing](https://supermemo.guru/wiki/Standardized_testing). Global optimization is based on the flawed reasoning that we can design a child's mind. Global optimization can also be done by parents who attempt to predict a child's future.
 
@@ -906,6 +976,8 @@ If the global long-term optimization is not possible, intermediate steps in the 
 The only way to optimize efficiently is to let the [learn drive](https://supermemo.guru/wiki/Learn_drive) determine the trajectory with gentle nudges from parents, mentors, peers, strangers, social media, wikipedia, Google, and more. Optimization of education must adhere to the **fundamental law of learning** (next).
 
 ## 6.24 Fundamental law of learning
+
+## 学习的基本规律
 
 Most people know that learning can be pleasurable. However, very few people appreciate how important this fact is for the [future of education](https://supermemo.guru/wiki/Education_reform).
 
