章节 6 翻译完成

--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -135,17 +135,17 @@
   - 6.17Biederman model
   - Biederman 模型
     - [6.17.1Pleasure of reading about the pleasure of reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_reading_about_the_pleasure_of_reading)
-    - 阅读关于阅读愉悦的愉悦
+    - 阅读关于阅读快乐的快乐
     - [6.17.2Opioid vs. dopamine pleasure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Opioid_vs._dopamine_pleasure)
-    - 阿片类药物与多巴胺的愉悦
+    - 阿片类药物与多巴胺的快乐
     - [6.17.3Pleasure of association](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_association)
-    - 联想的愉悦
+    - 联想的快乐
     - [6.17.4Impact of memory on the pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Impact_of_memory_on_the_pleasure_of_learning)
-    - 记忆对学习愉悦的影响
+    - 记忆对学习快乐的影响
     - [6.17.5Stages of learn drive evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stages_of_learn_drive_evolution)
     - 学习内驱力进化的几个阶段
   - [6.18Desirable difficulty](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Desirable_difficulty)
-  - 值得的难度
+  - 值得的困难
   - 6.19Addiction to learning
   - 学习成瘾
     - [6.19.1Inborn addiction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inborn_addiction)
@@ -183,7 +183,7 @@
     - [6.23.3Designing a child's mind](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Designing_a_child.27s_mind)
     - 设计一个孩子的思想
     - [6.23.4Reliance on emergence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Reliance_on_emergence)
-    - 依赖于突现
+    - 依靠涌现
     - [6.23.5The tree metaphor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_tree_metaphor)
     - 树类比
     - [6.23.6Local optimization](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Local_optimization)
@@ -193,7 +193,7 @@
   - [6.24Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning_2)
   - 学习的基本规律
   - [6.25Summary: Pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Pleasure_of_learning)
-  - 摘要：学习的愉悦
+  - 摘要：学习的快乐
 - 7Learn drive vs. learned helplessness
 - 学习内驱力与习得性无助
   - [7.1Loss of learn drive with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Loss_of_learn_drive_with_age)
